updates to api docs
